--- a/main.bib
+++ b/main.bib
@@ -273,7 +273,28 @@ MRREVIEWER = {Neil P. Strickland},
        URL = {http://dx.doi.org/10.1090/conm/146/01218},
 }
 
-% Optional fields: volume, number, pages, month, note
+@article {HedayatzadehFieldCase,
+    AUTHOR = {Hedayatzadeh, S. Mohammad Hadi},
+     TITLE = {Exterior powers of {$\pi$}-divisible modules over fields},
+   JOURNAL = {J. Number Theory},
+  FJOURNAL = {Journal of Number Theory},
+    VOLUME = {138},
+      YEAR = {2014},
+     PAGES = {119--174},
+      ISSN = {0022-314X},
+   MRCLASS = {11S85},
+  MRNUMBER = {3168925},
+       DOI = {10.1016/j.jnt.2013.10.023},
+       URL = {http://dx.doi.org/10.1016/j.jnt.2013.10.023},
+}
+
+% this could be updated
+@ARTICLE{HedayatzadehGeneralCase,
+  author = {Hedayatzadeh, S. Mohammad Hadi},
+  title = {Exterior powers of Lubin--Tate groups},
+  note = {\url{http://hedayatzadeh.info/Home_files/EPLTG.pdf}, Accessed: 2015-01-09}
+}
+
 @ARTICLE{HopkinsCOCTALOS,
   author = {Hopkins, Michael J.},
   title = {Complex oriented cohomology theories and the language of stacks},
@@ -472,7 +493,25 @@ MRREVIEWER = {Bj{\"o}rn Schuster},
 MRREVIEWER = {J. Dieudonn{\'e}},
 }
 
-@incollection {Lazarev,
+@article {LazarevDeformations,
+    AUTHOR = {Lazarev, A.},
+     TITLE = {Deformations of formal groups and stable homotopy theory},
+   JOURNAL = {Topology},
+  FJOURNAL = {Topology. An International Journal of Mathematics},
+    VOLUME = {36},
+      YEAR = {1997},
+    NUMBER = {6},
+     PAGES = {1317--1331},
+      ISSN = {0040-9383},
+     CODEN = {TPLGAF},
+   MRCLASS = {55N22 (14L05)},
+  MRNUMBER = {1452853},
+MRREVIEWER = {Keith Peter Johnson},
+       DOI = {10.1016/S0040-9383(96)00051-1},
+       URL = {http://dx.doi.org/10.1016/S0040-9383(96)00051-1},
+}
+
+@incollection {LazarevStructured,
     AUTHOR = {Lazarev, A.},
      TITLE = {Spaces of multiplicative maps between highly structured ring
               spectra},
