first pass at compiling the document with svmono.cls

--- a/finite.tex
+++ b/finite.tex
@@ -492,7 +492,7 @@ The difference is concentrated in degrees of the form $p^d$, beginning in degree
 p \log_\phi(x) & = \log_\phi (px) + \log_\phi(v_1 x^p) + \log_\phi(v_2 x^{p^2}) + \cdots \\
 \intertext{at which point we can use formal properties of the logarithm to deduce}
 \log_\phi [p]_\phi(x) & = \log_\phi \left(px +_\phi v_1 x^p +_\phi v_2 x^{p^2} +_\phi \cdots +_\phi v_n x^{p^n} +_\phi \cdots\right) \\
-[p]_\phi(x) & = px +_\phi v_1 x^p +_\phi v_2 x^{p^2} +_\phi \cdots +_\phi v_n x^{p^n} +_\phi \cdots \qedhere
+[p]_\phi(x) & = px +_\phi v_1 x^p +_\phi v_2 x^{p^2} +_\phi \cdots +_\phi v_n x^{p^n} +_\phi \cdots \qed
 \end{align*}
 \end{proof}
 
@@ -721,7 +721,7 @@ x +_B y & = h\left( h^{-1}(x) +_{\psi_r} h^{-1}(y) \right).
 Since these both deform the group law $\psi_{r-1}$, by \Cref{CalculationOfLTTangentSpace} there exist $m_j \in M$ and $f(x) \in M\ps{x}$ satisfying \[(x +_B y) - (x +_A y) = (df)(x, y) + \sum_{j=1}^{d-1} m_j v_j(x, y),\] where $v_j(x, y)$ is the $2$--cocycle associated to the cohomology $2$--class $\beta_j$.  The following definitions complete the induction:
 \begin{align*}
 g_r(x) & = h(x) - f(x), &
-\alpha_r(u_j) & = \beta(u_j) + m_j. \qedhere
+\alpha_r(u_j) & = \beta(u_j) + m_j. \qed
 \end{align*}
 \end{proof}
 
