--- a/hinfty.tex
+++ b/hinfty.tex
@@ -360,7 +360,7 @@ E\Sigma_r \times_{\Sigma_j \times \Sigma_{r-j}} (U^j \times V^{r-j}) \arrow{r}{E
 D_r(U \sqcup V) \arrow{r}{D_r(f \sqcup g)} & D_r X,
 \end{tikzcd}
 \end{center}
-where the vertical maps are projections.  The counterclockwise composite represents the $j$ summand of $P_r(x+y)$ coming from the decomposition above; the clockwise composite represents the class $\operatorname{Tr}_{j,r}^{MU} d^*(P_j x \times P_{r-j} y)$. \qedhere
+where the vertical maps are projections.  The counterclockwise composite represents the $j$ summand of $P_r(x+y)$ coming from the decomposition above; the clockwise composite represents the class $\operatorname{Tr}_{j,r}^{MU} d^*(P_j x \times P_{r-j} y)$. \qed
 \end{proof}
 
 \todo{There's also this useful naturality Lemma for power operations and Euler classes: $P_\pi(eV) = e(D_\pi V \to D_\pi X)$.  Does that come up in the Quillen chapter?  Maybe it should.}
