--- a/mo.tex
+++ b/mo.tex
@@ -79,7 +79,7 @@ T(\mu \circ (J_{\R} \times J_{\R})) & \simeq T(\mu \circ (J_{\R} \times J_{\R}) 
 & \simeq T(J_{\R}) \sm T(0) & \text{(monoidality)} \\
 & \simeq T(J_{\R}) \sm \Susp^\infty_+ BO & \text{(\Cref{TrivialBundleThomExample})} \\
 T(J_{\R}) \sm T(J_{\R}) & \simeq T(J_{\R}) \sm \Susp^\infty_+ BO & \text{(monoidality)} \\
-MO \sm MO & \simeq MO \sm \Susp^\infty_+ BO. & \text{(definition of $MO$)} & \phantom{.} \qedhere
+MO \sm MO & \simeq MO \sm \Susp^\infty_+ BO. & \text{(definition of $MO$)} & \phantom{.} \qed
 \end{align*}
 \end{proof}
 
@@ -111,7 +111,7 @@ The bottom arrow $\theta_E$ exists by applying the action map to both sides and 
 g\circ f &\simeq g \circ (\alpha_{MO}\sm E) \circ (\theta_{MO} \sm E) \circ f& \\
 & \simeq \alpha_E \circ h \circ (\theta_{MO}\sm E) \circ f & \text{(action map)}\\
 & \simeq \alpha_E \circ \theta_E \circ g \circ f & \text{(action map)}\\
-&\simeq \alpha_E \circ \theta_E. & \qedhere
+&\simeq \alpha_E \circ \theta_E. & \qed
 \end{align*}
 \end{proof}
 \todo{At least hint that there's a converse to this Theorem, to be explored later.}
@@ -430,7 +430,7 @@ Much of the results below do not rely on working with a Hopf algebra over the fi
 Let $A$ be a Hopf $k$--algebra, let $M$ be an $A$--comodule, and let $N$ be a $k$--module.  There is a \textit{cofree adjunction}: \[\CatOf{Comodules}_A(M, N \otimes_k A) \cong \CatOf{Modules}_k(M, N),\] where $N \otimes_k A$ is given the structure of an $A$--comodule by the coaction map \[N \otimes_k A \xrightarrow{\id \otimes \Delta} N \otimes_k (A \otimes_k A) = (N \otimes_k A) \otimes_k A.\]
 \end{lemma}
 \begin{proof}
-Given a map $f\co M \to N$ of $k$--modules, we can build the composite \[M \xrightarrow{\psi_M} M \otimes_k A \xrightarrow{f \otimes \id_A} N \otimes_k A.\]  Alternatively, given a map $g\co M \to N \otimes_k A$ of $A$--comodules, we build the composite \[M \xrightarrow{g} N \otimes_k A \xrightarrow{\id_N \otimes \eps} N \otimes_k k = N. \qedhere\]
+Given a map $f\co M \to N$ of $k$--modules, we can build the composite \[M \xrightarrow{\psi_M} M \otimes_k A \xrightarrow{f \otimes \id_A} N \otimes_k A.\]  Alternatively, given a map $g\co M \to N \otimes_k A$ of $A$--comodules, we build the composite \[M \xrightarrow{g} N \otimes_k A \xrightarrow{\id_N \otimes \eps} N \otimes_k k = N. \qed\]
 \end{proof}
 
 \begin{corollary}
@@ -503,7 +503,7 @@ Picking $M = k$, we have
 \begin{align*}
 \CatOf{Modules}_k(k, N') & = \CatOf{Comodules}_A(k, N) \\
 & = \CatOf{Modules}_k(k, k) \cotensor_A N \\
-& = k \cotensor_A N. \qedhere
+& = k \cotensor_A N. \qed
 \end{align*}
 \end{proof}
 
@@ -645,7 +645,7 @@ Set $M = \F_2[b_j \mid j \ne 2^k - 1]$.  \todo{Compare this with the base change
 & = \F_2 \otimes_{\F_2} M = M.
 \end{align*}
 \todo{Here you used $H\F_2P_0(MO) \cong \mathcal A_* \otimes M$, but what you seem to have proved in the previous theorem has to do with $\mathcal A P_0$ instead.  Does it make a difference?}
-Since the Adams spectral sequence \[H^*_{\mathrm{gp}}(\InternalAut_1(\G_a); H\F_2P_0(MO)) \Rightarrow \pi_* MO\] is concentrated on the $0$--line, it collapses.  Using the residual $\Gm$--action to infer the grading\todo{How?}, we thus deduce \[\pi_* MO = \F_2[b_j \mid j \ne 2^k-1]. \qedhere\]
+Since the Adams spectral sequence \[H^*_{\mathrm{gp}}(\InternalAut_1(\G_a); H\F_2P_0(MO)) \Rightarrow \pi_* MO\] is concentrated on the $0$--line, it collapses.  Using the residual $\Gm$--action to infer the grading\todo{How?}, we thus deduce \[\pi_* MO = \F_2[b_j \mid j \ne 2^k-1]. \qed\]
 \end{proof}
 
 This is pretty remarkable: some big statement about manifold geometry came down to understanding how we could reparametrize a certain formal group, itself a (fairly simple) purely algebraic problem.  \todo{Is there a reason we should expect this, even in hindsight?}We could close here, but there's an easy homotopical consequence of this fact that is worth recording before we leave:
