--- a/cooperations.tex
+++ b/cooperations.tex
@@ -180,7 +180,7 @@ As an algebra, the homology $H\F_2{}_*(\F_2)$ of the discrete space $\F_2$ is pr
 \end{proof}
 
 Now we turn to the rest of the induction:
-\begin{theorem}
+\begin{theorem}\label{UnstableSteenrodInduction}
 $H\F_2{}_* \OS{H\F_2}{t}$ is the exterior $\ast$--algebra on the $t$--fold $\circ$--products of the generators $a_{(j)} \in H\F_2{}_* B\F_2$.
 \end{theorem}
 \begin{proof}
@@ -452,7 +452,7 @@ where $\delta$ \todo{What's $\delta$?}is induced by $\delta [\omega] = (\mu^* - 
 The flatness condition in the Example is important to getting the calculation to work out right, and of course it is not satisfied when working over a perfect field of positive characteristic $p$ --- our favorite setting in \Cref{MfgI:Height} and \Cref{ChapterFiniteSpectra} more generally.  However, de Rham cohomology has the following remarkable lifting property (which we have specialized to $H^1_{dR}$):
 
 \begin{theorem}
-Let $A$ be a $\Z_{(p)}$--flat ring, let $f_1(x), f_2(x) \in A\ps{x}$ be power series without constant term.  If $f_1 \equiv f_2 \pmod{pA}$, then for any differential $\omega \in A\ps{x} dx$ the difference $f_1^*(\omega) - f_2^*(\omega)$ is exact.
+Let $A$ be a $\Z_{(p)}$--flat ring, let $f_1(x), f_2(x) \in A\ps{x}$ be power series without constant term.  If $f_1 \equiv f_2 \pmod{p}$, then for any differential $\omega \in A\ps{x} dx$ the difference $f_1^*(\omega) - f_2^*(\omega)$ is exact.
 \end{theorem}
 \begin{proof}
 Write $\omega = dg$ for $g \in K\ps{x}$, and write $f_2 = f_1 + p\Delta$.  Then
@@ -476,16 +476,16 @@ Let $k$ be a perfect field of characteristic $p > 0$, and let $\G_0$ be a formal
 \end{definition}
 
 \begin{remark}
-This is independent of choice of lift up to coherent isomorphism.  Given any other lift $\G'$ of $\G_0$ to $\W_p(k)$, we can find \emph{some} power series --- not necessarily a group homomorphism --- covering the identity on $\G_0$.  \Cref{H1dRIsCrystalline} then shows that this map induces an isomorphism between the two potential definitions of $M(\G_0)$.
+This is independent of choice of lift up to coherent isomorphism.  Given any other lift $\G'$ of $\G_0$ to $\W_p(k)$, we can find \emph{some} power series --- not necessarily a group homomorphism --- covering the identity on $\G_0$.  \Cref{H1dRIsCrystalline} then shows that this map induces a canonical isomorphism between the two potential definitions of $M(\G_0)$.
 \end{remark}
 
-Finally, note that the module $M(\G_0)$ carries some natural operations:
+Note that the module $M(\G_0)$ carries some natural operations:
 \begin{itemize}
 \item Arithmetic: $M(\G_0)$ is naturally a $\W_p(k)$--module, with the action by $\ell$ corresponding to multiplication--by--$\ell$ on $\G_0$. \todo{What is ``multiplication-by-$\ell$''?  Is it $\ell \bmod{p}$?}
-\item Frobenius: The map $x \mapsto x^p$ is a group homomorphism mod $p$, so by \Cref{H1dRIsCrystalline} induces a $\phi$--semilinear map $F\co M(\G_0) \to M(\G_0)$.  That is, $F(\alpha v) = \alpha^\phi F(v)$, where $\phi$ is a lift of the Frobenius on $k$ to $\W_p(k)$.
+\item Frobenius: The map $x \mapsto x^p$ is a group homomorphism mod $p$, so it induces a $\phi$--semilinear map $F\co M(\G_0) \to M(\G_0)$.  That is, $F(\alpha v) = \alpha^\phi F(v)$, where $\phi$ is a lift of the Frobenius on $k$ to $\W_p(k)$.
 \item Verschiebung: The Verschiebung map is given by the mysterious formula \[V\co \sum_{n=1}^\infty a_n x^n \mapsto p \sum_{n=1}^\infty a_{pn}^{\phi^{-1}} x^n.\] It satisfies anti-semilinearity, $aV(v) = V(a^\phi v)$, and also $FV = p$.
 \end{itemize}
-With this, we come to the main theorem of this section:
+With this, we come to the main theorem of this Lecture:
 
 \begin{theorem}
 The functor $M$ determines a contravariant equivalence of categories between smooth $1$--dimensional formal groups over $k$ of finite $p$--height and finite free $\W_p(k)$--modules equipped with appropriate operations $F$ and $V$, called \textit{Dieudonn\'e modules}. \qed \todo{Add in words about being uniform and reduced?}
@@ -514,7 +514,7 @@ Dieudonn\'e theory admits an extension to finite (flat) group schemes as well, a
 We can also use Dieudonn\'e theory to compute the automorphism group of a fixed Honda formal group, which is information we wanted back in \Cref{ChromaticLocalizationSection}:
 
 \begin{corollary}\label{FormOfStabilizerGroup}
-For $\Gamma_d$ the Honda formal group law of height $d$ over $\F_{p^d}$, we compute \[\Aut \Gamma_d \cong \left. \W_p(k) \<F\> \middle/ \left( \begin{array}{c} Fw = w^\phi F, \\ F^d = p \end{array} \right) \right.^\times.\]
+For $\Gamma_d$ the Honda formal group law of height $d$ over $\F_{p^d}$, we compute \[\Aut \Gamma_d \cong \left. \W_p(\F_{p^d}) \<F\> \middle/ \left( \begin{array}{c} Fw = w^\phi F, \\ F^d = p \end{array} \right) \right.^\times.\]
 \end{corollary}
 \begin{proof}
 The Dieudonn\'e module associated to $\Gamma_d$ satisfies $F^d = p$, and hence $M(\Gamma_d/k)$ is presented as a \emph{quotient} of the ring of operators on Dieudonn\'e modules.  The endomorphism ring of such a module is canonically isomorphic to the module itself.
@@ -691,6 +691,7 @@ To begin with, Dieudonn\'e theory as we have described it is concerned with \emp
 \todo{This definition is easier than it should be in generality, because not only are you working with a \emph{field} but you're even working with $\F_p$, which has no Frobenius.}
 The naive tensor product $M \otimes N$ of Dieudonn\'e modules $M$ and $N$ receives the structure of a $\W(k)[V]$--module, where $V(x \otimes y) = V(x) \otimes V(y)$.  We define the \textit{tensor product of Dieudonn\'e modules} by \[M \boxtimes N = \left.\W(k)[F, V] \otimes_{\W(k)[V]} (M \otimes N) \middle/ \left( \begin{array}{c} 1 \otimes Fx \otimes y = F \otimes x \otimes Vy, \\ 1 \otimes x \otimes Fy = F \otimes Vx \otimes y \end{array} \right) \right. .\]
 \end{definition}
+\todo{Since the category of Dieudonn\'{e} modules is the category of modules over some ring, there is also a tensor product over that ring instead over the partial ring $\W(k)[V]$.  This seems like to natural thing to consider, unless the equivalence provided by the Freyd-Mitchell embedding theorem is not monoidal?}
 
 \begin{lemma}[{\cite[Theorem 7.7]{GoerssDieudonne}}]
 \todo{There's a wrinkle here: if you want to say that $D_*$ is an equivalence of symmetric monoidal categories, then there needs to be a unit object. I don't think that's the case in the setting you're in.}
@@ -698,7 +699,7 @@ The natural map \[D_*(M) \boxtimes D_*(N) \to D_*(M \boxtimes N)\] is an isomorp
 \end{lemma}
 
 \begin{definition}
-For a ring $R$, a Dieudonn\'e $R$--algebra $A_*$ is a graded Dieudonn\'e module equipped with an $R$--action and an algebra product \[\circ\co A_* \boxtimes A_* \to A_*.\]
+For a ring $R$, a \emph{Dieudonn\'e $R$--algebra} $A_*$ is a graded Dieudonn\'e module equipped with an $R$--action and an algebra product \[\circ\co A_* \boxtimes A_* \to A_*.\]
 \end{definition}
 
 \begin{example}[{\cite[Proposition 10.2]{GoerssDieudonne}}]\todo{This citation at least says that the R--W relation holds over the topology $E_*$--Dieudonn\'e algebra.}
@@ -709,7 +710,7 @@ For a complex-oriented homology theory $E$, we define its Dieudonn\'e $E_*$--alg
 Restricting attention to the even parts, the maps \[R_E \to D_E \from D_* H_* \OS{E}{2*}\] are isomorphisms for $E$ Landweber flat.
 \end{theorem}
 \begin{proof}
-In \Cref{HopfRingForEBP}, we showed that these maps are isomorphisms for $E = BP$.  However, the right--hand object can be identified via Brown--Gitler juggling: \[D_n H_* \OS{E}{2j} = B(n)_n \Susp^{2j} E = E_{2j+n} B(n).\]  If $E$ is Landweber flat, then the middle-- and right--terms are determined by change-of-base from the respective $BP$ terms by definition of flatness.  Finally, the left term commutes with change-of-base by its algebraic definition, and the theorem follows.
+In \Cref{HopfRingForEBP}, we showed that these maps are isomorphisms for $E = BP$.  However, the right--hand object can be identified via Brown--Gitler juggling\todo{Is this really legal? We won't get intro trouble with odd indices and the semi-parity condition on $n$?}: \[D_n H_* \OS{E}{2j} = B(n)_n \Susp^{2j} E = E_{2j+n} B(n).\]  If $E$ is Landweber flat, then the middle-- and right--terms are determined by change-of-base from the respective $BP$ terms by definition of flatness.  Finally, the left term commutes with change-of-base by its algebraic definition, and the theorem follows.\todo{You made this sound more complicated in class than what's written here (with bar sequence arguments, etc.)  Can you provide some of those details here?}
 \end{proof}
 
 \begin{remark}
@@ -728,7 +729,7 @@ To see this, note that because $E_{2n-2k-1} B(2n) \to D_{2n} H_* \OS{E}{2k+1}$ i
 
 
 
-
+\todo{Jeremy asked whether there was a connection between Goerss's original proof and the free $E_2$--algebra with $p$ killed which we keep dancing around this semester.  I don't know, and it's a good question.}
 \todo{Compare also with the main result of {\cite{HopkinsHunton}}.}
 \todo{Remark 11.4 in the Hopf Ring paper says that the failure of the odd primary case to be an isomorphism is measured by the suspension homomorphism operator $e$, and the kernel of the natural surjective map is exactly the kernel of multiplication by $e$.  Have a look.}
 \todo{Ask Mike (and Jacob?) if there are analogues of these results for $kO$ which explain Mahowald's generalized $K$--theoretic Brown--Gitler spectra.  3/29: I did ask Mike, he said he didn't know. I also asked Paul, and he said this seemed unreasonable, since $kO$ isn't valued in co/commutative Hopf algebras.  This is a fair point: one would need to invent an ``analogue'' of Dieudonn\'e theory for $kO$, in the sense that some category it takes values in would have to be identified as abelian, where the category is rigid enough that it often sends fiber sequences to exact sequences in the category.}
@@ -776,22 +777,23 @@ To see this, note that because $E_{2n-2k-1} B(2n) \to D_{2n} H_* \OS{E}{2k+1}$ i
 
 
 
-% Then he shows that these recover Brown--Gitler spectra: $H^* B_n$ looks like a chunk of the mod--$p$ Steenrod algebra, up through degree dependent on $n$, and also the natural map $(B_n)_n Z \to H_n Z$ is surjective for finite CW--complexes $Z$.  The second part doesn't seem to be very hard, cf.\ Lemma 3.3.  The cohomology statement is pretty cool: computing homology instead, you get \[H_k B_n = (B_n)_k H\Z = D_n H_* \Loops^\infty K(\Z, n - k) = [Q H_* \Loops^\infty K(\Z, n-k)]_n,\] where the last equality relies on the congruence condition.
 
 
 
 
 
 
-\section{Cooperations between geometric points}
+\section{Cooperations and geometric points on $\moduli{fg}$}
 
-\todo{This isn't a good title. You specifically mean from the additive point to a finite height point.}
+Throughout today, we will write $K$ for a Morava $K$--theory $K_\Gamma$ (which, if you like, you can take to be $K(d)$) and $A$ for a finitely generated abelian group, and $H$ for the associated Eilenberg--Mac Lane spectrum.  Our goal is to study the unstable mixed cooperations $K_* \OS{H}{*}$, which we expect to be connected to formal group homomorphisms $\Gamma \to \G_a$ but which isn't covered by any of the cases studied thus far.  This calculation is interesting to us for two reasons:
+\begin{enumerate}
+\item These cooperations appear naturally when pursuing a ``fiberwise analysis'' of cooperations, or a chromatic analysis of unstable homotopy theory, along the lines of \Cref{ChapterFiniteSpectra}.
+\item The Eilenberg--Mac Lane spaces $\OS{H}{*}$ appear as the layers of Postnikov towers.  If we were to want to analyze the $K$--homology of a Postnikov tower (as we will in \Cref{ChapterSigmaOrientation}), we will naturally encounter pieces of $K_* \OS{H}{*}$, and we would be wise to have a firm handle on these objects.  It is a tribute to the perspective offered here that the successful way to approach this computation is not one-at-a-time, handicrafted for each possible Eilenberg--Mac Lane space, but rather all-at-once, as suggested by the unstable cooperations picture.
+\end{enumerate}
 
-Throughout today, we will write $K$ for a Morava $K$--theory $K_\Gamma$ (which, if you like, you can take to be $K(d)$) and $A$ for a finitely generated abelian group, and $H$ for the associated Eilenberg--Mac Lane spectrum.  Our goal is to study the unstable mixed cooperations $K_* \OS{H}{*}$.  Of course, this fits into our broader program of understanding various forms of unstable cooperations, especially if we were to pursue a ``stalkwise analysis'' of the sort in \Cref{ChapterFiniteSpectra}.  However, this calculation is especially interesting because of the appearance of the Eilenberg--Mac Lane spaces $\OS{H}{*}$ in other settings.  For instance, if we want to analyze the $K$--homology of a Postnikov tower (as we will in \Cref{ChapterSigmaOrientation}), we will naturally encounter pieces of $K_* \OS{H}{*}$, and we would be wise to have a firm handle on these objects.  It is another tribute to the power of structure that the successful way to approach this computation is not one-at-a-time, as one coming from the Postnikov perspective might attempt, but all-at-once, as suggested by the unstable cooperations picture.
+Unsurprisingly, our analysis will rest on the bar spectral sequence \[\Tor^{K_* \OS{H}{q}}_{*, *}(K_*, K_*) \Rightarrow K_* \OS{H}{q+1}.\]  However, because $K$--theory is naturally a $2$--periodic theory, our method in \Cref{COableCoopnsII} of inducting on homological degree and working with a triangular corner of the spectral sequence will fail.  Instead, we will induct on the Eilenberg--Mac Lane index $q$ as in \Cref{UnstableSteenrodCoops}, and as such we will begin with analyzing the base case of $q = 0$ where we are interested in manually computing $K_* BA$ for a reasonable abelian group $A$.  Since $K$--theory has K\"unneth isomorphisms and $B(A_1 \times A_2) \simeq BA_1 \times BA_2$, it suffices to do the computation just for $A = C_{p^j}$.
 
-Our calculation will eventually turn into an induction, so we will pursue a simple example first: the $K$--theory of just the classifying space $BA$, rather than a general Eilenberg--Mac Lane space.  Since $K$--theory has K\"unneth isomorphisms and $B(A_1 \times A_2) \simeq BA_1 \times BA_2$, it suffices to do the computation just for $A = C_{p^j}$.
-
-\begin{theorem}\citeme{Theorem 5.7 of RW, or Prop 2.4.4 of HL}
+\begin{theorem}[{\cite[Theorem 5.7]{RavenelWilsonKthyOfEMSpaces}, \cite[Proposition 2.4.4]{HopkinsLurie}}]\label{KtheoryConvertsTorsionToTorsion}
 There is an isomorphism \[BS^1[p^j]_K \cong BS^1_K[p^j].\]
 \end{theorem}
 \begin{proof}
@@ -805,62 +807,98 @@ S^1 \arrow{r} & ES^1 \arrow{r} & BS^1.
 The induced long exact sequence (known as the Gysin sequence, or as the couple in the Serre spectral sequence for the first fibration) takes the form
 \begin{center}
 \begin{tikzcd}
-& K_* BS^1 \arrow{rd}{- \frown [p^j](x)} \\
-K_*(BS^1[p^j]) \arrow{ru} & & K_* BS^1 \arrow{ll}{\partial}
+& K^* BS^1 \arrow[leftarrow]{rd}{- \smile [p^j](x)} \\
+K^*(BS^1[p^j]) \arrow[leftarrow]{ru} & & K^* BS^1 \arrow[leftarrow]{ll}{\partial}
 \end{tikzcd}
 \end{center}
-where $x$ is a coordinate on $BS^1_K$.  Because $BS^1_K$ is of finite height, the right diagonal map is surjective.  It follows that $\partial = 0$, and so this gives a short exact sequence of Hopf algebras, which we can reinterpret as a short exact sequence of group schemes \[B(S^1[p^j])_K \to BS^1_K \xrightarrow{p^j} BS^1_K. \qedhere\]
+where $x$ is a coordinate on $BS^1_K$.  Because $BS^1_K$ is of finite height, the right diagonal map is injective.  It follows that $\partial = 0$, and so this gives a short exact sequence of Hopf algebras, which we can reinterpret as a short exact sequence of group schemes \[B(S^1[p^j])_K \to BS^1_K \xrightarrow{p^j} BS^1_K. \qedhere\]
 \end{proof}
 
-There are a couple of approaches to the rest of this calculation, i.e., $K_* \OS{H}{q}$ for $q > 1$.  The original, due to Ravenel and Wilson, is to complete the calculation for the smallest abelian group $C_p$ and then induct upward toward more complicated groups like $C_{p^j}$ and $C_{p^\infty}$.  More recently, there is also a preprint of Hopkins and Lurie that begins with $A = C_{p^\infty}$ and then works downward.  We will do the \emph{easy} parts of both calculations, to give a feel for their relative strengths and deficiencies.
+\begin{remark}\label{KHomologyOfClassifyingSpace}
+Dually, there is also an exact sequence of Hopf algebras
+\begin{center}
+\begin{tikzcd}
+& K_* BS^1 \arrow{rd}{- \frown [p^j](x)} \\
+K_*(BS^1[p^j]) \arrow{ru} & & K_* BS^1, \arrow{ll}{\partial}
+\end{tikzcd}
+\end{center}
+where again $\partial = 0$ and hence $K_*(BS^1[p^j])$ is presented as the kernel of the map ``cap with $[p^j](x)$''.  We will revisit the duality next time.
+\end{remark}
 
-The Ravenel--Wilson version of the calculation proceeds much along the same lines as \Cref{UnstableSteenrodCoops}.  We will study the bar spectral sequences \[\Tor^{K_* \OS{H}{q}}_{*, *}(K_*, K_*) \Rightarrow K_* \OS{H}{q+1}\] for different indices $q$ and use the $\circ$--product to push differentials around among them.  We begin by rephrasing the calculation above in terms of the case $q = 0$.\citeme{Theorem 8.1 of RW}  In that setting, the ground algebra is given by \[K_* \OS{H\Z/p^j}{0} = K_*[[1]] / \<[1]^{p^j} - 1\> = K_*[[1] - [0]] / \<[1] - [0]\>^{p^j}.\]  Then, the $\Tor$--algebra for the truncated polynomial algebra $K_*[a_\emptyset] / a_\emptyset^{p^j}$ is given by the formula \[\Tor^{K_*[a_\emptyset] / a_\emptyset^{p^j}}_{*, *}(K_*, K_*) = \Lambda[\sigma a_\emptyset] \otimes \Gamma[\phi a_\emptyset],\] the combination of an exterior algebra and a divided power algebra.  We know which classes are supposed to survive this spectral sequence, and hence we know where the differentials must be:
+There are a couple of approaches to the rest of this calculation, i.e., $K_* \OS{H}{q}$ for $q > 1$.  The original, due to Ravenel and Wilson~\cite{RavenelWilsonKthyOfEMSpaces}, is to complete the calculation for the smallest abelian group $C_p$ and then induct upward toward more complicated groups like $C_{p^j}$ and $C_{p^\infty}$.  More recently, there is also a preprint of Hopkins and Lurie~\cite{HopkinsLurie} that begins with $A = C_{p^\infty}$ and then works downward.  We will do the \emph{easy} parts of both calculations, to give a feel for their relative strengths and deficiencies.
+
+The Ravenel--Wilson version of the calculation proceeds much along the same lines as \Cref{UnstableSteenrodCoops}.  Setting $H = H\Z/p$, we will study the bar spectral sequences \[\Tor^{K_* \OS{H}{q}}_{*, *}(K_*, K_*) \Rightarrow K_* \OS{H}{q+1}\] for different indices $q$ and use the $\circ$--product to push differentials around among them.  Our first move, as in \Cref{UnstableSteenrodCoops}, is to study the bar spectral sequence \[\Tor^{K_* \Z/p}_{*, *}(K_*, K_*) \Rightarrow K_* B\Z/p\] and analyze what \emph{must} happen in order to reach the conclusion of \Cref{KtheoryConvertsTorsionToTorsion}.  In the input to this spectral sequence, the ground algebra is given by\todo{Did you also use angle brackets to denote ideals in the rest of the document? Do you care to? Probably not.} \[K_* \OS{H\Z/p}{0} = K_*[[1]] / \<[1]^{p} - 1\> = K_*[[1] - [0]] / \<[1] - [0]\>^{p}.\]  The $\Tor$--algebra for this truncated polynomial algebra $K_*[a_\emptyset] / a_\emptyset^{p}$ is then given by the formula \[\Tor^{K_*[a_\emptyset] / a_\emptyset^{p}}_{*, *}(K_*, K_*) = \Lambda[\sigma a_\emptyset] \otimes \Gamma[\phi a_\emptyset],\] the combination of an exterior algebra and a divided power algebra.  We know which classes are supposed to survive this spectral sequence, and hence we know where the differentials must be:
 \begin{align*}
-d(\phi a_\emptyset)^{[p^{dj}]} & = \sigma a_\emptyset, \\
-\Rightarrow d(\phi a_\emptyset)^{[i + p^{dj}]} & = \sigma a_\emptyset \cdot (\phi a_\emptyset)^{[i]}.
+d(\phi a_\emptyset)^{[p^d]} & = \sigma a_\emptyset, \\
+\Rightarrow d(\phi a_\emptyset)^{[i + p^d]} & = \sigma a_\emptyset \cdot (\phi a_\emptyset)^{[i]}.
 \end{align*}
-After this differential the spectral sequence collapses, but there are some multiplicative extensions to sort out when $j > 1$.  Of course, these are all determined by already knowing the multiplicative structure on $K_* \OS{H\Z/p^j}{1}$.
+The spectral sequence collapses after this differential.\footnote{In the $j > 1$ version of this analysis, there are some multiplicative extensions to sort out.  Of course, these are all determined by already knowing the multiplicative structure on $K_* \OS{H\Z/p^j}{1}$.}
 
-We now turn to the general finite case:
-\begin{theorem}\citeme{Theorems 9.2 and 11.1 of RW}
-Using the $\circ$--product, \[K_* \OS{H\Z/p^j}{q} = \Alt^q \OS{H\Z/p^j}{1}.\]
+
+With the base case analysis completed, we turn to the induction on $q$:
+\begin{theorem}[{\cite[Theorem 9.2 and Theorem 11.1]{RavenelWilsonKthyOfEMSpaces}}]
+Using the $\circ$--product, \[K_* \OS{H\Z/p}{q} = \Alt^q \OS{H\Z/p}{1}.\]
 \end{theorem}
 \begin{proof}[Proof sketch]
 The inductive step turns out to be extremely index-rich, so I won't be so explicit or complete, but I'll point out the major landmarks.  It will be useful to use the shorthand $a_{(i)} = a_\emptyset^{[p^i]}$, where $(i)$ is thought of as a multi-index with one entry.
 
-We proceed by induction, assuming that $K_* \OS{H\Z/p^j}{q} = \Alt^q \OS{H\Z/p^j}{1}$ for a fixed $q$.  Computing the algebraic homology of $K_* \OS{H\Z/p^j}{q}$ yields a tensor of divided power and exterior classes, a pair for each algebra generator of $K_* \OS{H\Z/p^j}{q}$.  There is then a wonderful rewriting formula:\citeme{Ravenel Wilson, somewhere} \[(\phi a_{(i_1, \ldots, i_q)})^{[p^j]} \equiv  (\phi a_{(i_1, \ldots, i_{q-1})})^{[p^j]} \circ a_{(i_q + j)} \mod *\text{--decomposables}.\]  Since every class can be so decomposed, all the differentials and extensions are determined by the previous spectral sequence.  In particular, classes are hit by differentials exactly when $i_q + j$ is large enough.  It follows that the inductive assumption that $K_* \OS{H\Z/p^j}{q+1}$ is an exterior power holds, and the class $(\phi a_{(i_1, \ldots, i_q)})^{[p^j]}$ represents $a_{(j, i_1 + j, \ldots, i_q + j)}$.\todo{Indicate exactly where the intertwining between different values of $j$ happens.}
+We proceed by induction, assuming that $K_* \OS{H\Z/p}{q} = \Alt^q \OS{H\Z/p}{1}$ for a fixed $q$.  Computing the $\Tor$--algebra of $K_* \OS{H\Z/p^j}{q}$ again yields a tensor of divided power and exterior classes, a pair for each algebra generator of $K_* \OS{H\Z/p^j}{q}$.  In analogy to the rewriting formula used in \Cref{UnstableSteenrodInduction}, there is also a rewriting formula in this context~\cite[Lemmas 9.5-6]{RavenelWilsonKthyOfEMSpaces}\todo{Did you get this citation right? It doesn't look like I remember.}: \[(\phi a_{(i_1, \ldots, i_q)})^{[p^n]} \equiv (\phi a_{(i_1, \ldots, i_{q-1})})^{[p^n]} \circ a_{(i_q + n)} \mod *\text{--decomposables}.\]  Since every class can be so decomposed, all the differentials are determined by the previous spectral sequence.  In particular, classes are hit by differentials exactly when $i_q + n$ is large enough.  Chasing this through shows that the inductive assumption that $K_* \OS{H\Z/p}{q+1}$ is an exterior power holds, and the class $(\phi a_{(i_1, \ldots, i_q)})^{[p^n]}$ represents $a_{(n, i_1 + n, \ldots, i_q + n)}$.
 \end{proof}
 
 \begin{remark}
-Note that in the conditions below we are using the induction index to bound the degree of the infinite loopspace, whereas in \Cref{COableCoopnsII} we used the induction index to bound the topological degree of the homology groups.
+When reworking this computation for the case \[\Tor^{K_* \OS{H\Z/p^j}{q}}_{*, *}(K_*, K_*) \Rightarrow K_* \OS{H\Z/p^j}{q+1},\] the main difference is that there are various algebra extensions to keep track of.  These are controlled using the group maps
+\todo{These are Erick's suggestions of how to denote these group maps, so that it's clearer which is the projection and which is the inclusion. I should go back through the rest of the notes and enforce this notation elsewhere too.}
+\begin{align*}
+\Z/p^{j+1} & \to \Z/p^j, &
+\left(\frac{1}{p^j}\Z\right)/\Z & \to \left(\frac{1}{p^{j+1}} \Z\right) / \Z,
+\end{align*}
+together with knowledge of how the extensions strung together at the previous $j$--stage.  Then, these tools are revisited~\cite[Theorem 12.4]{RavenelWilsonKthyOfEMSpaces} to give a computation in the limiting case $A = C_{p^\infty}$, where there's a $p$--adic equivalence $HC_{p^\infty} \simeq^\wedge_p \Susp H\Z$.\todo{Mike has said something about the pairing $C_{p^j} \times C_{p^j}^* \to \Q/\Z$ not being functorial in $j$ (so as to pass to the direct limit) which gave me pause.  I should make sure I'm not messing something up here.}  The calculation in this setting is the most interesting one of all --- after all, it contains the case $BS^1_K$, which is of special interest to us.
 \end{remark}
 
-\todo{Mike has said something about the pairing $C_{p^j} \times C_{p^j}^* \to \Q/\Z$ not being functorial in $j$ (so as to pass to the direct limit) which gave me pause.  I should make sure I'm not messing something up here.}
-
-The case $j = 1$ of this proof is messy enough, and the case of a general $j$ requires interrelating the cases using the restriction map $C_{p^j} \to C_{p^{j+1}}$ and the projection map $C_{p^{j+1}} \to C_{p^j}$.  Then, these tools are revisited to give a computation in the limiting case $A = C_{p^\infty}$, where there's a $p$--adic equivalence $HC_{p^\infty} \simeq\widehat{{}_p} \Susp H\Z$.\citeme{Theorem 12.4 of RW}  The calculation in this setting is the most interesting one of all --- after all, it contains the case $BS^1_K$, which is of special interest to us.  Remarkable, it is easier to access directly than passing through all of this intermediate work.  To begin, we need the following algebraic calculation:
-
-\begin{theorem}\citeme{Theorem 2.2.10 of Hopkins--Lurie}\todo{Use the same cohomology notation you have been using for the cohomology of formal groups on previous days.}
-Suppose we have an exact sequence of Hopf $k$--algebras \[k \to A' \to A \xrightarrow{u} A'' \to k\] such that $A$ is connected and $F$--divisible, $A'$ is finite--dimensional, and the map $u$ factors through the relative Frobenius ${A''}^{(p)} \to A''$.  Write $\partial: \Ext^1 A' \to \Ext^2 A''$ for the going--around map.  The following are true:
-\begin{itemize}
-\item The Hopf algebra $A''$ is connected and $F$--divisible.
-\item The map $\partial$ induces an isomorphism \[\Sym^* \Ext^1 A' \to \Ext^* A''.\]
-\item Let $y_1, \ldots, y_n$ form a basis for $\Ext^1 A'$.  Then $\Ext^* A'$ is freely generated by the elements $y_*$ as a module over $\Ext^* A$. \qed
-\end{itemize}
+Remarkably, this maximally interesting case is easier to access directly than passing through all of this intermediate work, and this is the perspective of Hopkins and Lurie.  We will pursue an inductive calculation of the formal group schemes $(\OS{HC_{p^\infty}}{q})_K$ by iterating the cohomological bar spectral sequence, culminating in the following Theorem:
+\begin{theorem}
+There is an isomorphism of formal group schemes \[(\OS{HC_{p^\infty}}{q})_K \cong (\CP^\infty_K)^{\wedge q}.\]  In particular, $(\OS{HC_{p^\infty}}{q})_K$ is a ``$p$--divisible formal group'' of dimension $\binom{d-1}{q-1}$ and height $\binom{d}{q}$.
 \end{theorem}
 
-\begin{corollary}\citeme{Example 2.2.12 of Hopkins--Lurie}
-If $A$ is a connected $p$--divisible Hopf $k$--algebra, then \[k \to A[p^j] \to A \xrightarrow{p^j} A \to k\] is such an exact sequence.  Hence, $\Ext^* A$ is isomorphic to the symmetric algebra on $\Ext^1 A[p^j]$.  \qed
+\noindent Assume that this Theorem is true for a fixed value of $q$.  First, the cohomological bar spectral sequence lets us calculate just the \emph{formal scheme} structure of $(\OS{HC_{p^\infty}}{q+1})_K$, using the \emph{formal group} structure of $(\OS{HC_{p^\infty}}{q})_K$.  It has signature~(\cite{LazarevDeformations}, \cite[Example 2.3.5]{HopkinsLurie}) \[H^*((\OS{HC_{p^\infty}}{q})_K; \G_a) \otimes_{K_0} K_* \Rightarrow K^* \OS{HC_{p^\infty}}{q+1},\] and hence we moved to calculate the formal group cohomology of $(\OS{HC_{p^\infty}}{q})_K$.   The following Lemma furthers the calculations of formal group cohomology in \Cref{CohomologyOfGa} and \Cref{CalculationOfLTTangentSpace} to the situation of connected $p$--divisible groups of higher dimension:
+
+\begin{lemma}[{\cite[Theorem 2.2.10 and Example 2.2.12]{HopkinsLurie}}]
+If $\G$ is a connected $p$--divisible group over a field $k$, then $H^*(\G; \G_a)$ is isomorphic to the symmetric algebra on $H^1(\G[p^j]; \G_a)$. \qed
+\end{lemma}
+
+\begin{corollary}[{\cite[Proposition 2.4.11]{HopkinsLurie}}]
+As a formal scheme, $(\OS{HC_{p^\infty}}{q+1})_K$ is a formal variety of dimension $\binom{d-1}{q}$.
 \end{corollary}
+\begin{proof}
+By setting $\G = (\OS{HC_{p^\infty}}{q})_K$, the Lemma gives us access to the $E^2$--page of our cohomological bar spectral sequence.  We can calculate the dimension of $H^1$ to be\todo{I have tried several times to figure out where this comes from, using tools from the beginning of H--L Section 2.2, but I haven't really convinced myself.  It must have something to do with the dimension of the Dieudonn\'e module of $\G$ minus the dimension of the image of $F$ --- or something?} \[\dim_k 3H^1(\G[p]; \G_a) = \height (\OS{HC_{p^\infty}}{q})_K - \dim (\OS{HC_{p^\infty}}{q})_K = \binom{d}{q-1} - \binom{d-1}{q-1} = \binom{d-1}{q}.\]  It follows that the $E_2$--page of this spectral sequence is a polynomial $k$--algebra on $\binom{d-1}{q}$ generators, concentrated in even degrees, so that the spectral sequence collapses and $K^0 \OS{HC_{p^\infty}}{q+1}$ is a power series algebra on as many generators.
+\end{proof}
 
-\citeme{Proof of 2.4.11 from Hopkins--Lurie} Set $A = K(n)_0 G$.  The $E_2$--page of the relevant Eilenberg--Moore spectral sequence is given by \[\Ext_A^* \otimes K_\Gamma^* \Rightarrow K_\Gamma^* BG.\]  Since $\Spf A^\vee$ is $p$--divisible, we have an exact sequence of Hopf algebras \[k \to A[p] \to A \xrightarrow{[p]} A \to k.\]  It's supposed to follow that \[\dim_k \Ext^1_{A[p]} = \binom{n}{m-1} - \binom{n-1}{m-1} = \binom{n-1}{m},\] using $\height(A) = \binom{n}{m-1}$, $\dim(A) = \binom{n-1}{m-1}$, and $\dim_k \Ext^1_A = \dim DM(A) / F \cdot DM(A)$ (cf.\ Remark 2.2.4).  It follows from the Example above that the $E_2$--page of this spectral sequence is a polynomial $k$--algebra on $\binom{n-1}{m-1}$ generators, concentrated in even degrees, so that the spectral sequence collapses.  In turn, it follows that $K(n)^0 BG$ is a power series algebra on as many generators.
+In order to continue the induction, we now have to identify the group structure on $(\OS{HC_{p^\infty}}{q+1})_K$.  This is done using the theory of Dieudonn\'e modules:
 
-\citeme{Proof of 2.4.12 from Hopkins--Lurie} Now we have to identify the Hopf algebra structure on this (as an alternating power).
+\begin{theorem}[{\cite[Proposition 2.4.12]{HopkinsLurie}}]
+Let $q \ge 1$ be an integer.  Suppose that $\OS{H(\Q_p/\Z_p)}{q}$ and $\OS{HC_p}{q}$ are $K(n)$-good, that $(\OS{H(\Q_p/\Z_p)}{q})_K$ is a connected $p$--divisible group of height $\binom{d}{q}$ and dimension $\binom{d-1}{q-1}$, that the sequence of group schemes\todo{Figure out this formatting. I should be able to just set the fraction to be ``inline'' rather than displaymode, but I don't know how to do that.} \[(\OS{H(\frac{1}{p}\Z_p / \Z_p)}{q})_K \to (\OS{H(\Q_p/\Z_p)}{q})_K \to (\OS{H(\Q_p / \frac{1}{p}\Z_p)}{q})_K \to K_0\] is exact, and the map \[\theta^q\co \Q_p / \Z_p \otimes M(\CP^\infty_K)^{\wedge q} \to M((\OS{H(\Q_p/\Z_p)}{q})_K)\] is an isomorphism.  Then $\theta^{q+1}$ is an isomorphism and the formal group $\OS{H(\Q_p/\Z_p)}{q+1}$ is a connected $p$--divisible group with height $\binom{d}{q+1}$ and dimension $\binom{d-1}{q}$.
+\end{theorem}
+\begin{proof}[Proof sketch]
+By applying the snake lemma to the diagram
+\begin{center}
+\begin{tikzcd}
+0 \arrow{r} & M^{\wedge (q+1)} \arrow{r} \arrow{d}{V} & \Q \otimes M^{\wedge (q+1)} \arrow{r} \arrow{d}{V} & \Q_p / \Z_p \otimes M^{\wedge (q+1)} \arrow{r} \arrow{d}{V} & 0 \\
+0 \arrow{r} & M^{\wedge (q+1)} \arrow{r} & \Q \otimes M^{\wedge (q+1)} \arrow{r} & \Q_p / \Z_p \otimes M^{\wedge (q+1)} \arrow{r} & 0
+\end{tikzcd}
+\end{center}
+we learn that $V$ is a surjective endomorphism of $M^{\wedge (q+1)} M \otimes \Q_p/\Z_p$ and that there is an isomorphism \[\ker(V\co \Q_p/\Z_p \otimes M^{\wedge (q+1)} \to \Q_p/\Z_p \otimes M^{\wedge (q+1)}) \cong \operatorname{coker}(V\co M^{\wedge (q+1)} \to M^{\wedge (q+1)}).\]  The right-hand side is spanned by elements $V^I x$ with $I_1 = 0$, and hence the left-hand side has $k$--vector--space dimension $\binom{d-1}{q}$.  By very carefully studying the bar spectral sequence, one can learn that $\theta^m$ induces a surjection \[\ker V|_{\Q_p / \Z_p \otimes M^{\wedge m}} \to \ker V|_{D(Y)}.\]  In fact, since these two have the same rank, $\theta^m$ is an isomorphism on these subspaces.  Since the action of $V$ is locally nilpotent, this is enough to show that $\theta^m$ is an isomorphism, without restriction to subspaces: if it failed to be an injection, we could apply $V$ enough times to get an example of a nontrivial element in $\ker V_{\Q_p / \Z_p \otimes M^{\wedge m}}$ mapping to zero, and we can manually construct preimages through successive approximation.
+\end{proof}
 
-\todo[inline]{\textbf{Maybe the right thing to do here is to postpone the proof of 2.4.12 until tomorrow, when we introduce Dieudonn\'e theory?  It looks pretty heavy, and it's definitely Dieudonn\'e-y.}}
-
-\begin{remark}
-\todo[inline]{There's also Chapter 3 of Hopkins--Lurie, which constructs an alternating power group scheme without passing through Dieudonn\'e modules.  It should at least be mentioned.}
+\begin{remark}[{\cite[Proposition 2.4.13]{HopkinsLurie}}]
+This in hand, you now have to pull apart the full $p$--divisible group to get a calculation of $(\OS{H\Z/p^j}{q})_K$.  From this perspective, this is the hardest part with the longest, most convoluted proof.
 \end{remark}
+
+\begin{remark}[{\cite[Section 3]{HopkinsLurie}}]
+\citeme{You could also cite the alternating powers guy~\cite{HedayatzadehGeneralCase,HedayatzadehFieldCase} and a source for Dieudonn\'e crystals}
+Because $K_\Gamma^* \OS{H\Z/p^j}{q}$ is even, you can hope to augment this to a calculation of $E_\Gamma^* \OS{H\Z/p^j}{q}$.  This is indeed possible, and the analogous formula is true at the level of Hopf algebras: \[(E_\Gamma)_* \OS{HC_{p^j}}{q} \cong \Alt^q (E_\Gamma)_* \OS{HC_{p^j}}{1}.\] However, the attendant algebraic geometry is quite complicated: you either need a form of Dieudonn\'e theory that functions over $\context{E_\Gamma}$ (and then attempt to drag the proof above through that setting), or you need to directly confront what ``alternating power of a $p$--divisible group'' means at the level of $p$--divisible groups (and forego all of the time-saving help afforded to you by Dieudonn\'e theory).
+\end{remark}
+
+
 
 
 
@@ -874,21 +912,15 @@ If $A$ is a connected $p$--divisible Hopf $k$--algebra, then \[k \to A[p^j] \to 
 You'll notice that in $K_* \OS{H}{q+1}$ if we let the $q$--index tend to $\infty$, we get the $K$--homology of a point.  This is another way to see that the stable cooperations $K_* H$ vanish, meaning that the \emph{only} information present comes from unstable cooperations.\todo{We could even provide a quick proof of the stable calculation?  Cf.\ http://mathoverflow.net/questions/220952/localization-at-the-johnson-wilson-spectrum-and-rationalization, http://mathoverflow.net/a/99211/1094 .}
 \end{remark}
 
-\begin{remark}
-Since everything in sight is even, you also get a calculation of the $E$--theory for free.  In fact, as Hopf algebras, \[E_\Gamma \OS{H(\Q/\Z)}{q} \simeq \Alt^q E_\Gamma \OS{H(\Q/\Z)}{1}.\]
-\end{remark}
-
-\begin{remark}
-Also mention the base--change type formula: as an abelian group, a positive characteristic field $k$ splits as a wedge of $C_p$s, so \[K_* \OS{Hk}{*} = K_* \OS{H\F_p}{*} \otimes_{\F_p} k.\]
-\end{remark}
 
 
 
 
 
-Maybe talk about some consequences: the Hopkins--Ravenel--Wilson results on finite Postnikov towers and so on?
 
-\todo{I was thinking that this would give a counterexample to the idea that the additive unstable cooperations always present the functions on the scheme of homomorphisms, but this example may actually work too.  I'm not sure, but I think counting the ranks of $Q^* K(d)_* \OS{H\Z/p}{*}$ and $\InternalHom{FormalGps}(\Gamma_d, \G_a)$ (using Dieudonn\'e theory, or using Callan's tangent space trick) gives the same number...}
+
+\todo{Maybe talk about some consequences: the Hopkins--Ravenel--Wilson results on finite Postnikov towers and so on?}
+\todo{I was thinking that this would give a counterexample to the idea that the additive unstable cooperations always present the functions on the scheme of homomorphisms, but now I see that this example works too.  As lazy evidence, I think counting the ranks of $Q^* K(d)_* \OS{H\Z/p}{*}$ and $\InternalHom{FormalGps}(\Gamma_d, \G_a)$ (using Dieudonn\'e theory, or using Callan's tangent space trick) gives the same number.  More seriously, I think if you write out the scheme of homomorphisms, you'll see enough things degenerate (because $[-1]_{\G_a}(x) = -x$) that you do get this alternating algebra.}
 
 
 
