--- a/finite.tex
+++ b/finite.tex
@@ -811,7 +811,7 @@ A nontrivial result of Johnson and Wilson shows that if $MU_* X = 0$ for any $X$
 
 As another example of the primacy of these methods, we can show the following interesting result.  Say that $R$ is a field spectrum when every $R$--module (in the homotopy category) splits as a wedge of suspensions of $R$.  It is easy to check (as mentioned in the proof above) that $K(d)$ is an example of such a spectrum.
 
-\begin{corollary}
+\begin{corollary}\label{FieldSpectraAreKTheories}
 Every field spectrum $R$ splits as a wedge of Morava's $K(d)$ theories.
 \end{corollary}
 \begin{proof}
