--- a/hinfty.tex
+++ b/hinfty.tex
@@ -685,3 +685,5 @@ Matt's Section 4 talks about the $E_\infty$ structure on $E_n$ and compatibility
 Mike says that Mahowald--Thompson analyzed $L_{K(n)} \Loops S^{2n+1}$ by writing down some clever finite resolution.  The resolution that they produce by hand is actually exactly what you would get if you tried to understand the mapping spectral sequence for $E_\infty(E_n^{\Loops S^{2n+1}}, E_n)$.
 
 Mike also says that a consequence of the unpublished Hopkins--Lurie ambidexterity follow-up is that the comparison map $\CatOf{Spaces}(*, Y) \to E_\infty(E_n^Y, E_n^*)$ is an equivalence if $Y$ is a finite Postnikov tower living in the range of degrees visible to Morava $E$--theory.
+
+The final chapter of Matt's thesis has never really been published, where he investigates power operations on elliptic cohomology theories.  That might belong in this chapter as an example of the techinques, since we've already defined elliptic cohomology theories.
