--- a/quillen.tex
+++ b/quillen.tex
@@ -280,7 +280,7 @@ We define the following variants of ``stable divisor schemes'':
 \end{align*}
 \end{definition}
 
-\begin{theorem}
+\begin{theorem}\label{DivConstructionsAreFree}
 The scheme $\Div^+ C$ models the free formal monoid on the formal curve $C$.  The scheme $\Div C$ models the free formal group on the formal curve $C$.\footnote{That is, the group-completion of $\Div^+ C$ gives $\Div C$, even in absence of a pointing on $C$.}  The scheme $\Div_0 C$ \emph{simultaneously} models the free formal monoid and the free formal group on the \emph{pointed} formal curve $C$. \qed \todo{Can you at least see where the negation maps would come from w/o reference to coalgebras? (See FPFP Prop 18.1?)}
 \end{theorem}
 \noindent We will postpone the proof of this theorem until later, once we've developed a theory of coalgebraic formal schemes.\oweproof{The various $\Div$ constructions give free monoids / groups}
